Say goodbye to your eyes

--- a/CIA-Labs/cia-lab-contents.html
+++ b/CIA-Labs/cia-lab-contents.html
@@ -2,15 +2,24 @@
     <head>
         <meta charset="utf-8" />
         <title>Lab 1: Confidentiality</title>
-        <link rel="stylesheet" href="../styles/main.css" />
+        <link rel="stylesheet" href="../TestingStyles/main.css" />
+        <script type="text/javascript" src="../scripts/cShift.js"></script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
 
-    <nav>
-        <a href="cia-labs-home.html">Exit Lab</a>
-        <a href="cia-lab-overall-diagram.html">Visualizer</a>
-        <a href="cia-lab-contents.html">Explanation</a>
-        <a href="cia-lab-shift.html">Caesar Shift</a>
-    </nav>
+    <div class="topnav" id="Navbar">
+        <div class="headerBU" style="text-align: center; height: 80px;">
+            <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
+        </div>
+        <a href="../CIA-Labs/cia-labs-home.html">Exit Lab</a>
+        <a href="../CIA-Labs/cia-lab-overall-diagram.html">Visualizer</a>
+        <a href="../CIA-Labs/cia-lab-contents.html">Explanation</a>
+        <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
+    </div>
 
     <div class="page">
         <h1>CIA Lab 1: Confidentiality - Why It's Important</h1>
@@ -42,5 +51,9 @@
             <button ><a href="cia-lab-shift.html">Next Page</a></button>
         </div>
     </div>
+
+    <div class="footer">
+        Property of Bradley University. All Rights Reserved. 2023
+      </div>
 </body>
 
