--- a/CIA-Labs/cia-labs-home.html
+++ b/CIA-Labs/cia-labs-home.html
@@ -1,18 +1,22 @@
 <body>
     <head>
         <meta charset="utf-8" />
-        <title>RSA Encrypt Text</title>
-        <link rel="stylesheet" href="../styles/main.css" />
+        <title>Lab 1: Confidentiality</title>
+        <link rel="stylesheet" href="../TestingStyles/main.css" />
+        <script type="text/javascript" src="../scripts/cShift.js"></script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
 
-    <nav>
+    <div class="topnav" id="Navbar">
+        <div class="headerBU" style="text-align: center; height: 80px;">
+            <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
+        </div>
         <a class="selected" href="cia-labs-home.html">CIA Labs</a>
-        <!--Tentatively going to remove these from the available headers for now- if we need use of them for testing purposes, we can open in live server. 
-            Most of the functionality on these pages will be shifted to the CIA labs portion anyways. 
-        <a href="../caesar-cipher.html">Caesar Cipher</a>
-        <a href="../generate-keys.html">RSA Emulator v1</a>
-        <a href="../sign-message.html">Sign Message</a>-->
-    </nav>
+    </div>
 
     <div class="page">
         <h1>CIA Labs</h1>
@@ -28,5 +32,9 @@
         <button type="button" disabled>Integrity (Under Construction)</button>
         <br><br>
         <button type="button" disabled>Authenticity (Under Construction)</button>
+    </div>
+
+    <div class="footer">
+        Property of Bradley University. All Rights Reserved. 2023
     </div>
 </body>
