Form Space Sanitization
If the user only submits spaces for the overall diagram, the function will not play out and an alert will play.

--- a/TestingStyles/Test.html
+++ b/TestingStyles/Test.html
@@ -143,6 +143,12 @@
           var start = function () {
   
               aOriginal.value = message.value;
+              if (message.value.trim() == "")
+              {
+                alert("User has only entered spaces!");
+                return -1;
+              }
+              
               if(message.value == "")
               {
                   document.getElementById("info").style.color = "blue";
