fixed reset buttons to support firefox

--- a/TestingStyles/Test.html
+++ b/TestingStyles/Test.html
@@ -61,7 +61,7 @@
             <button id="next2" style="display: none;" onclick="stepTwo()">Next</button>
             <button id="next3" style="display: none;" onclick="stepThree()">Next</button>
             <button id="dButton" style="display: none;" onclick="final()">Decrypt</button>
-            <button id="reset2" onclick="window.location.reload()">Reset</button>
+            <button id="reset2" onclick="window.location.href = window.location.href;">Reset</button>
           </div>
 
         </div>
