Consolidation of Project Files

--- a/CIA-Labs/cia-lab-contents.html
+++ b/CIA-Labs/cia-lab-contents.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Lab 1: Confidentiality</title>
-        <link rel="stylesheet" href="../TestingStyles/main.css" />
+        <link rel="stylesheet" href="../styles/main.css" />
         <script type="text/javascript" src="../scripts/cShift.js"></script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
