--- a/CIA-Labs/cia-labs-home.html
+++ b/CIA-Labs/cia-labs-home.html
@@ -86,6 +86,8 @@
 
                     // set labels settings
                     chart.labels().format("{%Name}");
+                    chart.legend(false);
+                    chart.tooltip(false);
                 });
             </script>
 
