hotfix for overall diagram table style

--- a/CIA-Labs/cia-lab-overall-diagram.html
+++ b/CIA-Labs/cia-lab-overall-diagram.html
@@ -89,8 +89,8 @@
             </br>
             </br>
             <div>
-              <table name="cipher" id="cipherTable"></table>
-              <table name="message" id="messageTable"></table>
+              <table style="font-size: 22; letter-spacing: 2px; margin-left: auto; background-color: red; color: white; border: black;" name="cipher" id="cipherTable"></table>
+              <table style="font-size: 22; letter-spacing: 2px; margin-left: auto; background-color: red; color: white; border: black;" name="message" id="messageTable"></table>
             </div>
           </div>
 
@@ -218,7 +218,6 @@
                   hEncrypt.value = aEncrypt.value;
                   document.getElementById("next3").style = "display:none";
                   document.getElementById("arrows").src = "../images/Arrow_gif.gif";
-                  document.getElementById("rats").style = "display:all";
                   document.getElementById("lock").style = "display:all";
                   document.getElementById("dButton").style = "display:all";
                   moveText.textContent = bEncrypt.value;
