Easy Fixes from Monday Meeting

--- a/CIA-Labs/cia-lab-contents.html
+++ b/CIA-Labs/cia-lab-contents.html
@@ -37,13 +37,13 @@
         </p>
         --->
 
-        <button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button>
+        <!--<button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button> -->
         <script type="text/javascript" src="../scripts/button-helper.js"> </script>
-        <div id="example" class="header-description" style="visibility:hidden">
+        <div id="example" class="header-description">
             <p>
                 <img src="sending-message-2.gif" alt=""  width="800" height="400">
             </p>
-            <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);">Next</button>
+            <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);">More Info</button>
         </div>
         <div id="next" class="header-description" style="visibility:hidden">
             <p>
