--- a/CIA-Labs/cia-lab-overall-diagram.html
+++ b/CIA-Labs/cia-lab-overall-diagram.html
@@ -161,7 +161,7 @@
               aOriginal.value = message.value;
               if (message.value.trim() == "")
               {
-                alert("User has only entered spaces!");
+                alert("The inputted message is only spaces!");
                 return -1;
               }
               
