Remove what's happening and condenced white spaces

--- a/CIA-Labs/cia-lab-overall-diagram.html
+++ b/CIA-Labs/cia-lab-overall-diagram.html
@@ -16,7 +16,7 @@
         <div class="headerBU" style="text-align: center; height: 80px;">
           <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
-        <a href="../CIA-Labs/cia-labs-home.html">Exit Lab</a>
+        <a href="../CIA-Labs/cia-labs-home.html">CIA Lab Home</a>
         <a href="../CIA-Labs/cia-lab-overall-diagram.html">Visualizer</a>
         <a href="../CIA-Labs/cia-lab-contents.html">Explanation</a>
         <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
@@ -33,17 +33,12 @@
             below. To start from the beginning, use the "Reset" button.
           </p>-->
 
-          <h3>
-            What is going on?
-          </h3>
 
           <span>
-            <p id="info" class="box" style="font-size: 120%; border:3px double white;" readonly>
+            <p id="info" class="box" style="font-size: 120%;" readonly>
               Type in a message below and click next to learn how to safely send a message.
             </p>
-          </span>
-
-          </div>
+          </span>  
         
         <div class="header">
           <div>
