--- a/CIA-Labs/cia-lab-contents.html
+++ b/CIA-Labs/cia-lab-contents.html
@@ -21,7 +21,7 @@
         <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
     </div>
 
-    <div class="page">
+    <div class="page" style="padding-left: 20px;">
         <h1>CIA Lab 1: Confidentiality - Why It's Important</h1>
         <!--
         <p class="header-description">
