--- a/CIA-Labs/cia-lab-shift.html
+++ b/CIA-Labs/cia-lab-shift.html
@@ -21,7 +21,7 @@
         <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
     </div>
 
-    <div class="page" style="padding-left: 20px;">
+    <div class="page" style="text-align: center; padding-left: 20px;">
         <h1>CIA Lab 1: Confidentiality - Caesarian Shift Basics</h1>
         <p class="header-description">
             The Caesarian Cipher is an encryption method where you shift each character based on the given key value (Integer i.e. all Nautrual Numbers, 0, and Negative numbers).
@@ -84,6 +84,7 @@
                                 //document.body.appendChild(tbl);
                         // sets the border attribute of tbl to '2' [not sure but this might be getting overwritten by the css sytle]
                         tbl.setAttribute("border", "2");
+                        tbl.setAttribute("align", "center");
                     })();
                 </script>
                 <!-- Cipher Table END -->
