--- a/confidentiality-lab/confidentiality-lab-shift.html
+++ b/confidentiality-lab/confidentiality-lab-shift.html
@@ -15,10 +15,10 @@
         <div class="headerBU" style="text-align: center; height: 80px;">
           <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
-        <a href="../CIA-Labs/cia-labs-home.html">Exit Lab</a>
-        <a href="../CIA-Labs/cia-lab-overall-diagram.html">Visualizer</a>
-        <a href="../CIA-Labs/cia-lab-contents.html">Explanation</a>
-        <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
+        <a href="../cia-labs-home.html">CIA Lab Home</a>
+        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Visualizer</a>
+        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Explanation</a>
+        <a href="../confidentiality-lab/confidentiality-lab-shift.html">Caesar Shift</a>
     </div>
 
     <div class="page" style="text-align: center; padding-left: 20px;">
@@ -136,7 +136,7 @@
                 As you can see this cipher is fairly basic as it is a linear mapping of the letters based off a shift value. However, the caesar cipher is a great introductory
                 cipher to get us thinking about security and how we can use it to keep our data safe. Now let's go encrypt something...
             </p>
-            <button ><a href="cia-lab-overall-diagram.html">Next Page</a></button>
+            <button ><a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Next Page</a></button>
         </div>
     </div>
 
