--- a/confidentiality-lab/confidentiality-lab-explanation.html
+++ b/confidentiality-lab/confidentiality-lab-explanation.html
@@ -15,10 +15,10 @@
         <div class="headerBU" style="text-align: center; height: 80px;">
             <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
-        <a href="../CIA-Labs/cia-labs-home.html">Exit Lab</a>
-        <a href="../CIA-Labs/cia-lab-overall-diagram.html">Visualizer</a>
-        <a href="../CIA-Labs/cia-lab-contents.html">Explanation</a>
-        <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
+        <a href="../cia-labs-home.html">CIA Lab Home</a>
+        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Visualizer</a>
+        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Explanation</a>
+        <a href="../confidentiality-lab/confidentiality-lab-shift.html">Caesar Shift</a>
     </div>
 
     <div class="page" style="padding-left: 20px;">
@@ -51,7 +51,7 @@
                 One way we can encrypt a message in order to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. 
             </p>
         </div>
-        <button ><a href="cia-lab-shift.html">Next Page</a></button>
+        <button ><a href="../confidentiality-lab/confidentiality-lab-shift.html">Next Page</a></button>
     </div>
 
     <div class="footer">
