--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -16,10 +16,8 @@
         <div class="headerBU" style="text-align: center; height: 80px;">
           <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
-        <a href="../CIA-Labs/cia-labs-home.html">CIA Lab Home</a>
-        <a href="../CIA-Labs/cia-lab-overall-diagram.html">Visualizer</a>
-        <a href="../CIA-Labs/cia-lab-contents.html">Explanation</a>
-        <a href="../CIA-Labs/cia-lab-shift.html">Caesar Shift</a>
+        <a href="../cia-labs-home.html">CIA Lab Home</a>
+        <a href="../integrity-lab/integrity-lab-visualizer.html">Visualizer</a>
       </div>
       
     
