--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -2,7 +2,7 @@
     <body>
       <head>
         <meta charset="utf-8" />
-        <title>Lab 1: Confidentiality</title>
+        <title>Lab 2: Integrity</title>
         <link rel="stylesheet" href="../styles/main.css" />
         <script type="text/javascript" src="../scripts/cShift.js"></script>
         <meta charset="utf-8" />
@@ -17,12 +17,12 @@
           <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
         <a href="../cia-labs-home.html">CIA Lab Home</a>
-        <a href="../integrity-lab/integrity-lab-visualizer.html">Visualizer</a>
+        <a href="../integrity-lab/confidentiality-lab-visualizer.html">Visualizer</a>
       </div>
       
     
         <div class="header">
-          <h1>CIA Lab 1: Confidentiality - Try it out</h1>
+          <h1>CIA Lab 2: Integrity - Try it out</h1>
           <!---
           <p class="description">
             Sometimes encryption and decryption are easier to understand through
