Home Page Graphics Update
Sean and Zach

--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -39,17 +39,23 @@
                         {
                             x: "I",
                             value: 100,
-                            name: "Integrity"
+                            name: "Integrity",
+                            normal: {fill: "#FF0000 0.5"},
+                            label: {fontColor: "#000000", fontSize: "25"}
                         },
                         {
                             x: "A",
                             value: 100,
-                            name: "Authenticity"
+                            name: "Authenticity",
+                            normal: {fill: "#00FF00 0.5"},
+                            label: {fontColor: "#000000", fontSize: "25"}
                         },
                         {
                             x: "C",
                             value: 100,
-                            name: "Confidentiality"
+                            name: "Confidentiality",
+                            normal: {fill: "#0000FF 0.5"},
+                            label: {fontColor: "#000000", fontSize: "25"}
                         },
                         {
                             x: ["C", "A"],
@@ -69,7 +75,8 @@
                         {
                             x: ["C", "I", "A"],
                             value: 25,
-                            name: "The triad"
+                            name: "The Triad",
+                            label: {fontColor: "#000000", fontSize: "25"}
                         }
                     ];
                     // create venn diagram
